tweak to fix multiline comment display and map overflow

--- a/css/theme.less
+++ b/css/theme.less
@@ -1391,6 +1391,7 @@ fieldset.ui-controlgroup{
             border: none!important;
              .ui-link-inherit{
                     padding: 0 0 @padding-element-inset 0;
+                    white-space: normal;
                 }
             .ui-icon-arrow-r{
                 display: none;
@@ -2097,6 +2098,7 @@ fieldset.ui-controlgroup{
 
 .photo-map{
     position:relative;
+    overflow:hidden;
     .ui-bar.top-left-arrow,
     .top-no-arrow{
         margin-top: -8px;
